k8s/services/clusterip/busybox-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-pod
spec:
  #hostNetwork: true # hostNetwork 사용
  containers:
    - name: busybox
      image: busybox:1.28
      command:
        - sleep
        - "3600"
      resources:
        limits:
          memory: "128Mi"
          cpu: "100m"
