k8s/services/clusterip/nginx-clusterip-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    app: nginx
  type: ClusterIP
  ports:
    - name: tcp
      port: 80
      targetPort: 80
